fixed name and updated readMe

--- a/index.html
+++ b/index.html
@@ -4,79 +4,73 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>About Me</title>
-
+    <title>Ana Smith</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/normalize.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style2.css" />
+    <link href="https://fonts.googleapis.com/css?family=Homemade+Apple|Jomolhari|Playball|Vollkorn&display=swap" 
+    rel="stylesheet">
   </head>
-
-  <div class="row">
-    <div class="col-sm-4"><h1 #NamePlate>Ana Smith</h1></div>
-    <div class="col-sm-4"></div>
-    <div class="col-sm-4">
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link active" href="./index.html">About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./contact.html">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./portfolio.html">Portfolio</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <body>
-    <div class="container">
-      <h2 class="PageName">About Me</h2>
-      <div class="col-sm-12" style="display: flex;">
-        <img
-          src="./assets/images/AnaFlowerCrown.jpg"
-          alt="Ana in Summertime"
-          width="200"
-          height="200"
-        />
-
-        <p style="padding-left: 39px;">
-          Hi I'm Ana, and I am a Chicago native but I have always had a love of
-          'Small Town America' even though I am technically a city girl. I lived
-          in Culver, IN while attending boarding school in high school, and
-          Culver is as Small Town America as America can get. I am married to my
-          high school sweetheart, like a smalltown girl would be, typical right!
-          We have 3 amazing children, Logan who is 5, Zayn who is 3, and Autumn
-          Rose who is 8 months.
-        </p>
+  <body id="page">
+    <h1 class="NamePlate">Ana K. Smith</h1>
+    <div class="row navBar">
+      <div class="col-sm-4"></div>
+      <div class="col-sm-4"></div>
+      <div class="col-sm-4">
+        <ul class="nav ">
+          <li class="nav-item">
+            <a class="nav-link active" href="./aboutMe.html">LinkedIn</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact.html">Contact Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+          </li>
+        </ul>
       </div>
-      <p>
-        I work at a tech company that allows small buisnesses to do email
-        marketing. I'm on the Account Management team, but most of my friends
-        are on the Engineering team. They have convinced me their team is "where
-        its at" so I have decided to become a Software engineer as well. I love
-        that Engineering will give me the opportunity for a career and skills
-        that I can take to nearly every industry
-      </p>
-
-      <p>
-        When I'm not at work or in class with you fine folks. I love to be with
-        my family as well as go out with my girl friends. I love traveling as
-        well. My most recent trip was with my immediate and extended family to
-        Puerto Rico for a week in June. We stayed a Mega Manison Air BNB like we
-        were celebrities. It was amazing!
-      </p>
-
-      <p>
-        I look forward to learning more in this class, more time with family and
-        friends, and planning the next big extended family getaway.
-      </p>
     </div>
+</br>
+</br>
+    <div class="row"></div>
+    <div class="col-sm-1"></div>
+    <div class="col-sm-10">
+      <div class="jumbotron screen">
+        <h1  id= "bio" class="display-4">Hi I'm Ana</h1>
+        <!-- <div row>
+                <div class="col-sm-8"></div>
+                <div class="col-sm-4" style="display: flex-end;">
+                        <img
+                        class="myPic"  src="./assets/images/anaCurls.jpg" 
+                        alt="AnaCurls"/>
+              </div> -->
+        <p >
+                I am a Chicago native and 'm pretty sure I could become the World 
+                Champion for the Who wants to be a Millionaire show and Jeopardy! 
+                While I may be great at trivia, I have an unquenchable desire to 
+                learn as much as I can about the nuances of every project I have undertaken. 
+        </p>
+        <hr class="my-1" />
+        <p>
+                I pride myself on being able to find the facts and ultimately the solution to 
+                any problems my clients or teammates face. At my core I have a passion for 
+                investigation and helping others. 
+                 Accolades for a job well done are always nice but it means the most to me to know 
+                 at the end of the day I have made a difference and a positive impact in the lives 
+                 of others.
+        </p>
+        
+      </div>
+    </div>
+   
+    <!-- <div container>
+    <div row>
 
-    <footer class="footer">
-      <p>Copyright</p>
-    </footer>
+    
+    </div> -->
+    </div>
   </body>
 </html>
