--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <div class="col-sm-4">
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" href="./index.html">About Me</a>
+          <a class="nav-link active" href="./aboutMe.html">About Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./contact.html">Contact</a>
