--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,9 @@
     <div class="col-sm-4"></div>
     <div class="col-sm-4">
       <ul class="nav justify-content-end">
+          <li class="nav-item">
+              <a class="nav-link active" href="./index.html">Home</a>
+            </li>
         <li class="nav-item">
           <a class="nav-link active" href="./aboutMe.html">About Me</a>
         </li>
@@ -40,34 +43,40 @@
           </div>
         </div>
         <section class="Thumbnail">
-          <img
-            src="./assets/images/watch.jpg"
-            alt="watch"
-            width="200"
-            height="200"
-          />
-          <div class="text">Hangman</div>
+          <a href="https://evwhite2.github.io/FindInChi/">
+            <img
+              src="./assets/images/watch.jpg"
+              alt="watch"
+              width="200"
+              height="200"
+            />
+          </a>
+          <div class="text">FindInChi</div>
         </section>
 
         <section class="Thumbnail">
-          <img
-            src="./assets/images/ferriswheel.jpg"
-            alt="watch"
-            width="200"
-            height="200"
-          />
-          <div class="text">RPG Game</div>
+          <a href="https://anakristina1101.github.io/TimedQuizz/">
+            <img
+              src="./assets/images/ferriswheel.jpg"
+              alt="watch"
+              width="200"
+              height="200"
+            />
+          </a>
+          <div class="text">Halloween Quizz</div>
         </section>
 
         <section class="Thumbnail">
-          <img
-            class="ThumbNail"
-            src="./assets/images/flowers.jpg"
-            alt="watch"
-            width="200"
-            height="200"
-          />
-          <div class="text">Trivia Game</div>
+          <a href="https://anakristina1101.github.io/WeatherForecast/">
+            <img
+              class="ThumbNail"
+              src="./assets/images/flowers.jpg"
+              alt="watch"
+              width="200"
+              height="200"
+            />
+          </a>
+          <div class="text">Weather Today</div>
         </section>
 
         <section class="Thumbnail">
@@ -77,7 +86,7 @@
             width="200"
             height="200"
           />
-          <div class="text">RPG Game</div>
+          <div class="text">Coming Soon</div>
         </section>
 
         <section class="Thumbnail">
@@ -87,7 +96,7 @@
             width="200"
             height="200"
           />
-          <div class="text">RPG Game</div>
+          <div class="text">Coming Soon</div>
         </section>
       </div>
     </div>
