--- a/aboutMe.html
+++ b/aboutMe.html
@@ -20,6 +20,9 @@
     <div class="col-sm-4">
       <ul class="nav justify-content-end">
         <li class="nav-item">
+          <a class="nav-link active" href="./index.html">Home</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" href="./aboutMe.html">About Me</a>
         </li>
         <li class="nav-item">
