--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
   <body id="page">
     <h1 class="NamePlate">Ana K. Smith</h1>
     <div class="row navBar">
+      <div class="col-sm-2"></div>
       <div class="col-sm-4"></div>
-      <div class="col-sm-4"></div>
-      <div class="col-sm-4">
+      <div class="col-sm-6">
         <ul class="nav ">
           <li class="nav-item">
-            <a class="nav-link active" href="./aboutMe.html">LinkedIn</a>
+            <a class="nav-link active" href="www.linkedin.com/in/ana-smith-5293984a">LinkedIn</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="./aboutMe.html">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./contact.html">Contact Me</a>
@@ -66,11 +69,7 @@
       </div>
     </div>
    
-    <!-- <div container>
-    <div row>
-
-    
-    </div> -->
+  
     </div>
   </body>
 </html>
