--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="col-sm-6">
         <ul class="nav ">
           <li class="nav-item">
-            <a class="nav-link active" href="www.linkedin.com/in/ana-smith-5293984a">LinkedIn</a>
+            <a class="nav-link active" href="https://www.linkedin.com/in/ana-smith-5293984a">LinkedIn</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="./aboutMe.html">About Me</a>
