--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
         </section>
 
         <section class="Thumbnail">
-          <a href="https://anakristina1101.github.io/WeatherForecast/">
+          <a href="https://anakristina1101.github.io/WeatherAPP/>
             <img
               class="ThumbNail"
               src="./assets/images/flowers.jpg"
